examples/bad/void-argument.elina
fn f(argument: void): void {
  return argument;
}

fn g(): void {
}

fn main(): void {
  f(g());
}